@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-07-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> configure.ac: Try to be more insistent about compilation failure
+        if libjpeg version is less than 6b.  IRIX compiler only warns
+        about #error preprocessor statement.
+
+</UL>
+<p>
 2009-07-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
