@@ -1,3 +1,9 @@
+2009-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* configure.ac: Try to be more insistent about compilation failure
+	if libjpeg version is less than 6b.  IRIX compiler only warns
+	about #error preprocessor statement.
+
 2009-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickSetCompressionQuality): New Wand
